<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>gr.aegean.icsd</groupId>

    <artifactId>icarus</artifactId>

    <version>0.0.1-SNAPSHOT</version>

    <name>icarus</name>

    <description>icarus</description>


    <properties>
        <java.version>21</java.version>
    </properties>


    <dependencies>

        <!--> ###  - Spring Boot Starters - ###<!/-->

        <!--> Spring Boot Data JPA<!/-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!--> Spring Boot Security </!-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!--> Spring Boot HATEOAS<!/-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-hateoas</artifactId>
        </dependency>

        <!--> Spring Boot Validation<!/-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!--> Spring Boot Web<!/-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!--> Spring Boot Test<!/-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!--> ###  - Database Drivers - ###<!/-->

        <!--> PostgresSQL </!-->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.0</version>
            <scope>runtime</scope>
        </dependency>

        <!--> ###  - External Tools - ###<!/-->

        <!---> Eclipse BiRT <!/-->

        <!--> https://stackoverflow.com/questions/75804853/eclipse-birt-report-design-file-version-3-2-24-missing <!/-->
        <dependency>
            <groupId>com.innoventsolutions.birt.runtime</groupId>
            <artifactId>org.eclipse.birt.runtime_4.8.0-20180626</artifactId>
            <version>4.8.0</version>
        </dependency>

        <!-- Eclipse JGit -->
        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>6.8.0.202311291450-r</version>
        </dependency>


        <!-- JMeter Java API -->
        <dependency>
            <groupId>org.apache.jmeter</groupId>
            <artifactId>ApacheJMeter_java</artifactId>
            <version>5.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.jmeter</groupId>
            <artifactId>ApacheJMeter_http</artifactId>
            <version>5.6.2</version>
        </dependency>

        <!-- RestAssured -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>5.3.2</version>

            <!-- https://github.com/rest-assured/rest-assured/issues/1612 -->
            <exclusions>

                <exclusion>
                    <groupId>org.apache.groovy</groupId>
                    <artifactId>groovy</artifactId>
                </exclusion>

                <exclusion>
                    <groupId>org.apache.groovy</groupId>
                    <artifactId>groovy-xml</artifactId>
                </exclusion>

            </exclusions>
        </dependency>

        <!-- Terraform CDK for Java -->
        <dependency>
            <groupId>com.hashicorp</groupId>
            <artifactId>cdktf</artifactId>
            <version>0.19.0</version>
        </dependency>

        <!-- Terraform AWS Provider -->
        <dependency>
            <groupId>com.hashicorp</groupId>
            <artifactId>cdktf-provider-aws</artifactId>
            <version>18.0.3</version>
        </dependency>

        <!-- Terraform Google Provider -->
        <dependency>
            <groupId>com.hashicorp</groupId>
            <artifactId>cdktf-provider-google</artifactId>
            <version>12.0.2</version>
        </dependency>

        <!-- Terraform Constructs -->
        <dependency>
            <groupId>software.constructs</groupId>
            <artifactId>constructs</artifactId>
            <version>10.0.25</version>
        </dependency>

        <!--> ###  - Cloud Provider SDK's - ###<!/-->

        <!-- AWS Java SDK for Amazon CloudWatch -->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>cloudwatch</artifactId>
            <version>2.21.11</version>
        </dependency>

        <!-- GCP Java SDK for Google Cloud Monitoring -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-monitoring</artifactId>
            <version>3.30.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.auth</groupId>
            <artifactId>google-auth-library-oauth2-http</artifactId>
            <version>1.20.0</version>
        </dependency>

    </dependencies>


    <build>

        <plugins>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <image>
                        <builder>paketobuildpacks/builder-jammy-base:latest</builder>
                    </image>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

        </plugins>

    </build>


</project>
